add support for typescript, sass, and styled-components

--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "react-boilerplate",
-  "version": "0.0.0",
+  "name": "react-webpack-starter",
+  "version": "1.0.0",
   "description": "React Boilerplate Package",
-  "main": "./index.js",
+  "homepage": "https://github.com/willdvlpr/react-webpack-starter",
+  "bugs": {
+    "url": "https://github.com/willdvlpr/react-webpack-starter/issues",
+    "email": "willdvlpr@pm.me"
+  },
+  "author": "Will Jones",
+  "main": "./src/index.tsx",
   "scripts": {
-    "start": "webpack-dev-server --mode development --hot"
+    "start": "webpack-dev-server --mode development --hot",
+    "build": "webpack --mode production",
+    "launch": "webpack-dev-server --open"
   },
   "license": "MIT",
   "devDependencies": {
@@ -12,16 +20,28 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.16.0",
     "babel-loader": "^8.0.0",
+    "css-loader": "5.2.7",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "4.14.1",
+    "sass": "^1.43.4",
+    "sass-loader": "7.3.1",
+    "style-loader": "2.0.0",
+    "typescript": "^4.4.4",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "css-loader": "^3.2.0",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "webpack-dev-server": "^3.8.0"
-  },
+    "react-router-dom": "5.2.0",
+    "styled-components": "^5.3.3"
+  }
 }
